--- a/package.json
+++ b/package.json
@@ -103,6 +103,6 @@
     "webpack-merge": "^4.1.3"
   },
   "dependencies": {
-    "imeanireallycantbelieveitsnotrandom": "^1.3.0"
+    "@icantbelieveitsnotrandom/weighted-randomizer": "^1.0.0"
   }
 }
