--- a/package.json
+++ b/package.json
@@ -70,7 +70,6 @@
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-jest": "^21.17.0",
     "eslint-plugin-react": "^7.9.1",
-    "express": "^4.16.3",
     "extract-text-webpack-plugin": "^3.0.2",
     "fetch-mock": "^6.5.2",
     "file-loader": "^2.0.0",
@@ -104,6 +103,7 @@
     "webpack-merge": "^4.1.3"
   },
   "dependencies": {
-    "@icantbelieveitsnotrandom/weighted-randomizer": "^1.0.0"
+    "@icantbelieveitsnotrandom/weighted-randomizer": "^1.0.0",
+    "express": "^4.16.3"
   }
 }
