--- a/package.json
+++ b/package.json
@@ -69,7 +69,6 @@
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-jest": "^21.17.0",
     "eslint-plugin-react": "^7.9.1",
-    "express": "^4.16.3",
     "extract-text-webpack-plugin": "^3.0.2",
     "fetch-mock": "^6.5.2",
     "file-loader": "^2.0.0",
@@ -103,10 +102,7 @@
     "webpack-merge": "^4.1.3"
   },
   "dependencies": {
-<<<<<<< Updated upstream
-    "@icantbelieveitsnotrandom/weighted-randomizer": "^1.0.0"
-=======
-    "imeanireallycantbelieveitsnotrandom": "^1.3.0"
->>>>>>> Stashed changes
+    "@icantbelieveitsnotrandom/weighted-randomizer": "^1.0.0",
+    "express": "^4.16.3"
   }
 }
